# NeuroChat

./: docker-compose.yml  structure.txt
.github/workflow/: ci-cd.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2025-03-01-101456_create_users/: up.sql
backend/migrations/2025-03-12-091018_add_owner_to_groups/: down.sql  up.sql
backend/migrations/2025-03-13-063506_add_members_to_groups/: down.sql  up.sql
backend/src/: actors.rs  auth.rs  db.rs  groups.rs  main.rs  models.rs  schema.rs  ws.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: AuthModal.tsx  Chat.tsx  CreateCommunityModal.tsx  EditCommunityModal.tsx  Navbar.tsx
frontend/context/: AuthContext.tsx
frontend/data/: dummyUsers.ts
frontend/pages/: _app.tsx  _document.tsx  chat.tsx  index.tsx  profile.tsx
frontend/pages/api/: communities.ts
frontend/styles/: globals.css
frontend/types/: react-three.d.ts  types.ts
