[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
chrono = "0.4"
jsonwebtoken = "7.2"
bcrypt = "0.10"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4"] }