[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"           # Add this for Actix actor system
actix-web = "4.9.0"
actix-cors = "0.6"
actix-web-actors = "4.3.0" # Add this for WebSocket support
bcrypt = "0.10.1"
chrono = "0.4.38"
diesel = { version = "2.2.7", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
r2d2 = "0.8.10"