[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.6"
actix-web-actors = "4.3.0"
bcrypt = "0.10.1"
chrono = "0.4.40"
diesel = { version = "2.2.7", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
r2d2 = "0.8.10"
http = "0.2"